--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ langgraph==0.6.4
 langgraph-checkpoint==2.1.1
 langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.0
+langsmith==0.4.13
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
